--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
 
     signingConfigs {
-        
+
         if (System.getenv("TRAVIS")) {
             release {
                 storeFile rootProject.file("release.keystore.jks")
@@ -13,7 +13,7 @@ android {
             }
 
             debug {
-                storeFile rootProject.file("release.keystore.jks")
+                storeFile rootProject.file("debug.keystore.jks")
                 storePassword System.getenv("KEYSTORE_PASS")
                 keyAlias System.getenv("ALIAS_NAME")
                 keyPassword System.getenv("ALIAS_PASS")
