--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-
+    buildToolsVersion "26.0.2"
     signingConfigs {
 
         if (System.getenv("TRAVIS")) {
