--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,24 @@
+sudo: false
 language: android
+
+env:
+  global:
+    - ANDROID_API_LEVEL=24
+    - ANDROID_BUILD_TOOLS_VERSION=26.0.2
+    - ANDROID_ABI=armeabi-v7a
+    - ANDROID_TAG=google_apis
+
 android:
 
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
     - tools
+    - tools
     - platform-tools
 
     # The BuildTools version used by your project
-    - build-tools-26.0.2
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
 
     # The SDK version used to compile your project
     - android-26
@@ -19,11 +29,11 @@ android:
     - extra-android-m2repository
 
     # For emulator usage
-    - sys-img-armeabi-v7a-addon-google_apis-google-24
+    - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
 
 before_script:
 
-    - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
+    - echo no | android create avd --force -n test -t "android-$ANDROID_API_LEVEL" --abi $ANDROID_ABI --tag $ANDROID_TAG
     - emulator -avd test -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
