--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ android:
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
 
     # The SDK version used to compile your project
-    - android-26
+    - android-$ANDROID_API_LEVEL
 
     # Additional components
     - extra-google-google_play_services
