--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 sudo: false
 language: android
 
+cache:
+  directories:
+    - ${TRAVIS_BUILD_DIR}/gradle/caches/
+    - ${TRAVIS_BUILD_DIR}/gradle/wrapper/dists/
+
+
 env:
   global:
-    - ANDROID_API_LEVEL=24
+    - ANDROID_API_LEVEL=22
     - ANDROID_BUILD_TOOLS_VERSION=26.0.2
     - ANDROID_ABI=armeabi-v7a
     - ANDROID_TAG=google_apis
@@ -11,6 +17,9 @@ env:
 android:
 
   components:
+    - tools
+    - platform-tools
+    - tools
     # The BuildTools version used by your project
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
 
@@ -18,6 +27,7 @@ android:
     - android-$ANDROID_API_LEVEL
 
     # Additional components
+    - extra-android-support
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
