--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,31 @@
 sudo: false
 language: android
 
-cache:
-  directories:
-    - ${TRAVIS_BUILD_DIR}/gradle/caches/
-    - ${TRAVIS_BUILD_DIR}/gradle/wrapper/dists/
-
-
 env:
   global:
-    - ANDROID_API_LEVEL=22
+    - ANDROID_API_LEVEL=24
     - ANDROID_BUILD_TOOLS_VERSION=26.0.2
     - ANDROID_ABI=armeabi-v7a
     - ANDROID_TAG=google_apis
+
+before_script:
+  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
+before_install:
+- chmod +x gradlew
+
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+
+cache:
+  directories:
+  - "$HOME/.m2"
+  - "$HOME/.gradle"
+  - "$HOME/.gradle/caches/"
+  - "$HOME/.gradle/wrapper/"
 
 android:
 
@@ -20,11 +33,8 @@ android:
     - tools
     - platform-tools
     - tools
-    # The BuildTools version used by your project
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-
-    # The SDK version used to compile your project
-    - android-$ANDROID_API_LEVEL
+    - android=$ANDROID_API_LEVEL
 
     # Additional components
     - extra-android-support
@@ -32,13 +42,8 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
 
-    # For emulator usage
-    - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
+script:
+  - "./gradlew clean build connectedAndroidTest -PdisablePreDex --stacktrace"
 
-before_script:
-
-    - echo no | android create avd --force -n test -t "android-$ANDROID_API_LEVEL" --abi $ANDROID_ABI --tag $ANDROID_TAG
-    - emulator -avd test -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
-
+notifications:
+  email: true
