--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ env:
     - ANDROID_TAG=google_apis
 
 before_script:
-  - echo no | android create avd --force -n test -t android-$ANDROID_API_LEVEL --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - echo no | android create avd --force -n test -t \"android-$ANDROID_API_LEVEL\" --abi $ANDROID_ABI --tag $ANDROID_TAG
+  - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
 before_install:
-- chmod +x gradlew
+  - chmod +x gradlew
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
