--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,17 @@ language: android
 env:
   global:
     - ANDROID_API_LEVEL=24
+    - ANDROID_EMULATOR_API_LEVEL=22
     - ANDROID_BUILD_TOOLS_VERSION=26.0.2
     - ANDROID_ABI=armeabi-v7a
     - ANDROID_TAG=google_apis
 
 before_script:
-  - echo no | android create avd --force -n test -t \"android-$ANDROID_API_LEVEL\" --abi $ANDROID_ABI --tag $ANDROID_TAG
+  - echo no | android create avd --force -n test -t \"android-$ANDROID_EMULATOR_API_LEVEL\" --abi $ANDROID_ABI --tag $ANDROID_TAG
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
+  - sleep 180
+  - adb devices
   - adb shell input keyevent 82 &
 
 before_install:
@@ -35,6 +38,7 @@ android:
     - tools
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android=$ANDROID_API_LEVEL
+    - android=$ANDROID_EMULATOR_API_LEVEL
 
     # Additional components
     - extra-android-support
@@ -43,7 +47,7 @@ android:
     - extra-android-m2repository
 
 script:
-  - "./gradlew clean build connectedAndroidTest -PdisablePreDex --stacktrace"
+  - ./gradlew clean build connectedAndroidTest -PdisablePreDex --stacktrace
 
 notifications:
   email: true
